--- a/TagSystemViewer/Styles/Styles.axaml
+++ b/TagSystemViewer/Styles/Styles.axaml
@@ -1,11 +1,15 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Design.PreviewWith>
-        <Border Padding="20">
-            <!-- Add Controls for Previewer Here -->
-        </Border>
-    </Design.PreviewWith>
     <StyleInclude Source="IcoMoonStyle.axaml"/>
-    
-    <!-- Add Styles Here -->
+    <StyleInclude Source="DefaultStyle.axaml"/>
+    <StyleInclude Source="ToolTipStyle.axaml"/>
+    <StyleInclude Source="ButtonStyle.axaml"/>
+    <StyleInclude Source="ListboxStyle.axaml"/>
+    <StyleInclude Source="TextBoxStyle.axaml"/>
+    <StyleInclude Source="AllFoundUrlsStyle.axaml"/>
+    <StyleInclude Source="SplitterStyle.axaml"/>
+    <StyleInclude Source="AutocompleteStyle.axaml"/>
+    <StyleInclude Source="TagGridStyle.axaml"/>
+    <StyleInclude Source="TagsSearchStyle.axaml"/>
+    <StyleInclude Source="ToggleButton.axaml"/>
 </Styles>
