--- a/TagSystemViewer/Views/TagGridEditor.axaml
+++ b/TagSystemViewer/Views/TagGridEditor.axaml
@@ -3,50 +3,64 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:TagSystemViewer.ViewModels"
-        xmlns:controls="clr-namespace:TagSystemViewer.Controls"
+        xmlns:controls1="clr-namespace:TagSystemViewer.Views.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TagSystemViewer.Views.TagGridEditor"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="LocalTagSystem">
-
+        Icon="/Assets/Icons/tag_editor.ico"
+        Title="Редактор тегів">
   <Design.DataContext>
     <viewModels:TagEditorViewModel/>
   </Design.DataContext>
     <Grid RowDefinitions="9*, 1*">
-    <Grid ColumnDefinitions="1*,1*,1*,1*" RowDefinitions="9*,1*">
-      <controls:TagGrid Grid.Row="0" Grid.Column="0" Text="Усі" ItemsSource="{Binding Tags}"
-                     SelectedItem="{Binding CurrentTag, Mode=TwoWay}"
-                     Command="{Binding AddCurrentToRemoves}"
-                     />
-      <controls:TagGrid Grid.Row="0" Grid.Column="1" 
-                     Text="Для додання" ItemsSource="{Binding TagsToAdd}"
-                     SelectedItem="{Binding CurrentAddTag, Mode=TwoWay}"
-                     Command="{Binding ExcludeAdds}"
-                     ScrollViewer.VerticalScrollBarVisibility="Visible"
-                     />
-      <controls:TagGrid Grid.Row="0" Grid.Column="2"
-                     Text="Для оновлення" ItemsSource="{Binding TagsToUpdate}"
-                     SelectedItem="{Binding CurrentUpdateTag, Mode=TwoWay}"
-                     Command="{Binding ExcludeUpdates}"
-                     />
-      <controls:TagGrid Grid.Row="0" Grid.Column="3"
-                     Text="Для видалення" ItemsSource="{Binding TagsToRemove}"
-                     SelectedItem="{Binding CurrentRemoveTag, Mode=TwoWay}"
-                     Command="{Binding ExcludeRemoves}"/>
-      </Grid>
-        <DockPanel Grid.Row="1">
-            <WrapPanel DockPanel.Dock="Left" Orientation="Horizontal">
+        <Grid ColumnDefinitions="*,1,*,1,*,1,*" RowDefinitions="9*,1*">
+            <controls1:TagGrid Grid.Row="0" Grid.Column="0" Text="Усі" ItemsSource="{Binding Tags}"
+                              SelectedItem="{Binding CurrentTag, Mode=TwoWay}"
+                              Command="{Binding AddCurrentToRemoves}"
+            />
+            <GridSplitter Grid.Row="0" Grid.Column="1" ResizeDirection="Columns"/>
+            <controls1:TagGrid Grid.Row="0" Grid.Column="2" 
+                              Text="Для додання" ItemsSource="{Binding TagsToAdd}"
+                              SelectedItem="{Binding CurrentAddTag, Mode=TwoWay}"
+                              Command="{Binding ExcludeAdds}"
+            />
+            <GridSplitter Grid.Row="0" Grid.Column="3" ResizeDirection="Columns"/>
+            <controls1:TagGrid Grid.Row="0" Grid.Column="4"
+                              Text="Для оновлення" ItemsSource="{Binding TagsToUpdate}"
+                              SelectedItem="{Binding CurrentUpdateTag, Mode=TwoWay}"
+                              Command="{Binding ExcludeUpdates}"
+            />
+            <GridSplitter Grid.Row="0" Grid.Column="5" ResizeDirection="Columns"/>
+            <controls1:TagGrid Grid.Row="0" Grid.Column="6"
+                              Text="Для видалення" ItemsSource="{Binding TagsToRemove}"
+                              SelectedItem="{Binding CurrentRemoveTag, Mode=TwoWay}"
+                              Command="{Binding ExcludeRemoves}"/>
+        </Grid>
+        <Grid Grid.Row="1" ColumnDefinitions="8*, 2*">
+            <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Bottom">
                 <TextBox Text="{Binding NewName}"/>
-                <Button Classes="Add" Command="{Binding AddCurrentToAdds}"/>
-                <Button Classes="Update" Command="{Binding AddCurrentToUpdates}"/>
+                <Button Classes="Add" Command="{Binding AddCurrentToAdds}"
+                        ToolTip.Tip="{StaticResource AddTagToAddsTip}"
+                        HotKey="{DynamicResource AddHotkey}"
+                />
+                <Button Classes="Update" Command="{Binding AddCurrentToUpdates}"
+                        ToolTip.Tip="{StaticResource AddTagToUpdatesTip}"
+                        HotKey="{DynamicResource UpdateHotkey}"
+                />
             </WrapPanel>
-            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                <Button Classes="Refresh" Command="{Binding ReadTags}"/>
-                <Button Classes="Cancel" Command="{Binding $parent[Window].Close}"/>
-                <Button Classes="Confirm" Command="{Binding Confirm}"/>
-            </StackPanel>
-            <TextBlock/>
-        </DockPanel>
-      
+            <WrapPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                <Button Classes="Refresh" Command="{Binding ReadTags}"
+                        ToolTip.Tip="{StaticResource RefreshViewTip}"
+                        HotKey="{DynamicResource RefreshHotkey}"
+                        />
+                <Button Classes="Cancel" Command="{Binding $parent[Window].Close}"
+                        ToolTip.Tip="{StaticResource ExitWithoutChangesTip}"
+                        HotKey="{DynamicResource ExitHotkey}"
+                        />
+                <Button Classes="Confirm" Command="{Binding Confirm}"
+                        ToolTip.Tip="{StaticResource ConfirmTip}"
+                        HotKey="{DynamicResource ConfirmHotkey}"
+                        />
+            </WrapPanel>
+        </Grid>
     </Grid>
 </Window>
